Fix spacing of cube size buttons

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -16,11 +16,13 @@
  * specific language governing permissions and limitations
  * under the License.
  */
-*, *::before, *::after {
+*, 
+*::before, 
+*::after {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
     margin: 0;
     padding: 0;
-    box-sizing: content-box;
+    box-sizing: border-box;
 }
 
 /* IN CORDOVA DEFAULT STRUCTURE */
@@ -41,14 +43,14 @@ body {
     width:100%;
 }
 
-body {
+body, button {
     font-family: 'Montserrat', sans-serif;
     font-size: 1rem;
     text-align: center;
 }
 
 /* IN CORDOVA DEFAULT STRUCTURE */
-@m  edia DISABLED {
+@media DISABLED {
 
     /* Portrait layout (default) */
     .app {
@@ -79,6 +81,7 @@ body {
 .app > main,
 .app > main > div {
     max-height: 100%;
+    max-width: 100%;
     height: 100%;
     overflow: hidden;
 }
@@ -109,6 +112,15 @@ img {
     width: 100px;
 }
 
+button {
+    border: none;
+    background-color: transparent;
+}
+
+li {
+    list-style-type: none;
+}
+
 .italicize {
     font-style: italic;
 }
@@ -130,8 +142,29 @@ img {
 }
 
 
+
+.cube-select-page > div > .cube-sizes-container {
+    margin: 3rem 0 3rem 0;
+}
+
+
+.cube-select-page > div > .cube-sizes-container > li {
+    margin: 1rem;
+}
+.cube-select-page > div > .cube-sizes-container > li > button {
+    font-size: 1.5rem;
+    background-color: #414141;
+    width: 100%;
+    padding: 1rem 0;
+    /* margin: 1rem; */
+    border-radius: 10px;
+
+}
+
+
 .cube-select-page > div > .bottom-icon-container.flex {
     flex-direction: row;
+
 }
 
 
